qtlocation-opensource-src (5.5.0-0ubuntu1) UNRELEASED; urgency=medium

  * New upstream release.
  * Update .install files.
  * Update symbols from build logs.
  * Rebase debian/patches/appSpecificTileCache.diff.

 -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Fri, 27 Mar 2015 07:03:26 +0000

qtlocation-opensource-src (5.4.2-1ubuntu1) wily; urgency=medium

  * New upstream release.
  * Rename Debian's qtpositioning5-doc-html.links to 
    qtlocation5-doc-html.links

 -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Thu, 11 Jun 2015 13:54:39 +0000

qtlocation-opensource-src (5.4.2-1) experimental; urgency=medium

  * New upstream release.
    - Bump Qt build dependencies.
  * Expose HTML documentation (Closes: #751179).

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 03 Jun 2015 16:20:36 -0300

qtlocation-opensource-src (5.4.1-1ubuntu1) vivid; urgency=medium

  * New upstream release.
  * Merge with Debian, remaining changes:
    - Build the unreleased Qt Location module 
    - Keep the examples/dbg/doc packages named "qtlocation" as per upstream
    - debian/patches/appSpecificTileCache.diff
    - Different test enablement
    - Keep certain transitions until 16.04 LTS

 -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Wed, 11 Mar 2015 07:05:43 +0000

qtlocation-opensource-src (5.4.1-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.4.1.
  * Update watch and copyright to use https://download.qt.io/.
  * Mark three destructors symbols missing with GCC 5 as optional
    (closes: #778090).

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 05 Mar 2015 10:08:42 +0300

qtlocation-opensource-src (5.4.0-1ubuntu1) vivid; urgency=medium

  * New upstream release.
  * Drop qt3d dependency, not needed anymore in Qt 5.4
  * Bump dependencies.
  * Update symbols.
  * Merge with Debian, remaining changes:
    - Build the unreleased Qt Location module 
    - Keep the examples/dbg/doc packages named "qtlocation" as per upstream